--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity
             android:name=".LoginActivity"
             android:windowSoftInputMode="adjustResize"
-            android:label="@string/login"/>
+            android:label="@string/sign_in"/>
         <activity
             android:name=".MainActivity">
             <intent-filter>
