--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WorkoutApp">
+        <activity android:name=".HomeActivity" />
         <activity
             android:name=".SignUpActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:label="@string/sign_up"/>
+            android:label="@string/sign_up"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".LoginActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:label="@string/sign_in"/>
-        <activity
-            android:name=".MainActivity">
+            android:label="@string/sign_in"
+            android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
